# autosweep

./: AutoSweep.cc  AutoSweep.h  CMakeLists.txt  Cell.cc  Cell.h  EdgeFinder.h  EdgeSolver.h  GameInterface.h  GameLogic.cc  GameLogic.h  GameState.h  Grid.h  Location.h  MineField.cc  MineField.h  Neighbours.h  README.md  README.txt  SharedObject.cc  SharedObject.h  SimulatedGame.h  SweepAction.h  SweepConfig.h  SweepMain.h  as.cc  log.cc  log.h  utils.cc  utils.h
etc/: autosweep-Info.plist
icons/: autosweep.icns
qt/: IconFactory.cc  IconFactory.h  MineFieldButton.cc  MineFieldButton.h  MineFieldWidget.cc  MineFieldWidget.h  QtGameLogic.cc  QtGameLogic.h  QtGameView.cc  QtGameView.h  icons.qrc  qasview.cc
solvers/: Constraint.h  ConstraintSet.h  ConstraintSolver.h  ConstraintSweep.cc  ConstraintSweep.h  NeighbourSweep.cc  NeighbourSweep.h
